--- a/proiect/appsettings.Development.json
+++ b/proiect/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=projectDB;User ID=sa;Password=Strongadmin1234;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
