--- a/proiect/appsettings.Development.json
+++ b/proiect/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=projectDB;User ID=sa;Password=Strongadmin1234;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=proiect;User ID=sa;Password=Strongadmin1234;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
