--- a/proiect/appsettings.Development.json
+++ b/proiect/appsettings.Development.json
@@ -8,5 +8,8 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=localhost;Initial Catalog=proiect;User ID=sa;Password=Strongadmin1234;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "AppSettings": {
+    "JwtSecret":  "jwtSecretproiect"
   }
 }
