--- a/proiect/appsettings.Development.json
+++ b/proiect/appsettings.Development.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Data Source=localhost;Initial Catalog=proiect;User ID=sa;Password=Strongadmin1234;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AppSettings": {
-    "JwtSecret":  "jwtSecretproiect"
+    "JwtToken":  "jwtSecretproiect"
   }
 }
