removed frontend directory

--- a/proiect/proiect.csproj
+++ b/proiect/proiect.csproj
@@ -23,4 +23,8 @@
     <Folder Include="Helpers\Extensions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\frontend\frontend.esproj" />
+  </ItemGroup>
+
 </Project>
